fix horizontal scroll

--- a/src/app/components/data-grid/data-grid.component.scss
+++ b/src/app/components/data-grid/data-grid.component.scss
@@ -127,7 +127,8 @@
 
   .table-responsive {
     border-radius: 4px;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: visible;
   }
 
   .table {
